# odysseus-pewdiepie

./: build-macos-app.sh  build-tauri-app.sh  fix_crew_owner.py  import_agents.py  setup-actions.sh
.github/workflows/: build-odysseus.yml
tauri-app/: apply.sh  package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
tauri-app/ui/: index.html
